[project]
name = "diffusion-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "huggingface_hub>=0.20.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "transformers>=4.56.0",
    "pytorch-lightning>=2.5.4",
    "tensorboard>=2.20.0",
    "rich>=14.1.0",
]
